# humhum

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  design-qa-android-living-signals.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/commands/: dev.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  macos-release.yml  windows.yml
.qoder/: settings.json
.qoder/skills/verify/: SKILL.md
.stitch/: DESIGN.md  metadata.json
.stitch/designs/android-quiet-rooms/: index.html  preview.css  preview.js
.superpowers/brainstorm/: .last-token
.superpowers/sdd/: final-fix-report.md  hexa-goal-task-4-report.md  progress.md  task-1-report.md  task-3-report.md
android/: INSTALL-XIAOMI.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/scripts/: setup-release-signing.sh
docs/: android-install.md  architecture.md  competitive-parity-2026-07-12.md  contributing.md  design.md  getting-started.md  hum-v3-preview.html  hum-v4-preview.html  hum-v5-preview.html  hum-v6-preview.html  hum-v7-preview.html  hum-v8-preview.html  humi-hush-3d-actions.html  macos-direct-distribution.md  macos-release.md  noma-preview.html  noma-v2-preview.html  pi-sidecar.md  qoder-rage-mode.md  vision.html  vision.md  windows-development.md
docs/security/: wechat-native-reader.md
docs/superpowers/plans/: 2026-07-10-pi-react-agent.md  2026-07-11-hexa-codex-mobile-remote.md  2026-07-11-hexa-local-codex-bridge.md  2026-07-11-hush-macos-notification-bridge.md  2026-07-11-macos-awake-mode.md  2026-07-12-competitive-parity.md  2026-07-12-hermes-supervision.md  2026-07-12-humhum-android-background-monitor.md  2026-07-12-humhum-android-encrypted-offline-snapshot.md  2026-07-12-humhum-android-release-signing.md  2026-07-12-humhum-android-xiaomi-survival.md  2026-07-12-humhum-android.md  2026-07-12-humhum-encrypted-wake-relay.md  (+34 more)
docs/testing/: wechat-external-key-provider.md  wechat-native-reader-phase-1.md
hooks/: devpod-hook.sh  humhum-cursor-focus-extension.js  humhum-hook.ps1  humhum-hook.sh  humhum-opencode-plugin.ts  install.ps1  install.sh  uninstall.ps1  uninstall.sh
native/humhum-wechat/: NOTICE.md  go.mod
public/: site.webmanifest
relay/: Caddyfile  Dockerfile  README.md  docker-compose.yml  package.json
relay/src/: fcm.mjs  server.mjs  store.mjs
relay/test/: fcm.test.mjs  load.mjs  relay.test.mjs
scripts/: build-wechat-reader.mjs  check-wechat-reader-boundary.mjs  edge-tts-bridge.py  hexa-plan-input.mjs  hexa-plan-input.test.mjs  hexa-plan.mjs  hexa-session-context.mjs  hexa-session-context.test.mjs  hexa-unwatch.mjs  hexa-update.mjs  hexa-watch.mjs  humhum-hexa.mjs  humhum-hexa.test.mjs  hush-egress-boundary.test.mjs  install.sh  notarize-macos.sh  run-tests.mjs  run-tests.test.mjs  system-tts-windows.ps1  test-windows-hooks.ps1  wechat-reader-boundary.test.mjs
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/wechat/: native-manifest.json
src-tauri/scripts/: qw-auto-allow.py
src-tauri/src/: agent_kernel.rs  anywhere_crypto.rs  claude_followup.rs  client_registry.rs  commands.rs  config.rs  cursor_focus_extension.rs  dws_hush_bridge.rs  event_bus.rs  git_changes.rs  hermes_plugin.rs  hexa_connector.rs  hexa_goal_store.rs  hexa_protocol.rs  hexa_watch_store.rs  hook_server.rs  humi_brain.rs  hush_egress_guard.rs  hush_signal_store.rs  hush_store.rs  intervention_queue.rs  knowledge_store.rs  lib.rs  local_api_auth.rs  mac_notification_watcher.rs  main.rs  mobile_bridge.rs  mobile_personal_context.rs  mobile_relay.rs  native_audio.rs  openclaw_hook.rs  openclaw_transcript.rs  opencode_followup.rs  pi_sidecar.rs  qoder_auto_allow.rs  qoder_log_watcher.rs  remote_bridge.rs  session_store.rs  skill_index.rs  sound_pack.rs  (+11 more)
src-tauri/src/codex_bridge/: mod.rs  protocol.rs  transport.rs
src-tauri/src/mobile/: index.html
src-tauri/tests/: codex_app_server_smoke.rs
src/engine/: AgentCreatures.ts  FallbackRenderer.test.ts  FallbackRenderer.ts  HumSprite.ts  PixiApp.ts  constants.ts  index.ts  types.ts
src/hooks/: agentLabel.test.ts  hexaAgentOverview.test.ts  hexaAgentOverview.ts  hexaBridge.test.ts  hexaBridge.ts  hexaGoalMonitoring.test.ts  hexaGoalMonitoring.ts  hexaPlanningCapability.test.ts  hexaPlanningCapability.ts  hexaPriority.test.ts  hexaPriority.ts  hexaRefreshPolicy.test.ts  hexaRefreshPolicy.ts  hexaSessionReport.test.ts  hexaSessionReport.ts  hexaWatchState.test.ts  hexaWatchState.ts  interventionProvider.test.ts  interventionProvider.ts  interventionState.test.ts  interventionState.ts  mobilePairingQr.test.ts  mobilePairingQr.ts  mobilePresence.test.ts  mobilePresence.ts  mobileRelayConfig.test.ts  mobileRelayConfig.ts  sessionChangesState.test.ts  sessionChangesState.ts  useAudioQueue.ts  useEventBus.ts  useHexaData.ts  useKeyboardShortcuts.ts  useVoiceCommand.ts
src/lib/: bootstrap.ts  event-bus.ts  mascot-theme.test.ts  mascot-theme.ts  notification-policy.test.ts  notification-policy.ts  path-display.test.ts  path-display.ts  pipeline.ts  webview-log.ts
src/styles/: global.css  hub-character-rooms.css
src/types/: index.ts
(+327 files in other folders)
