[package]
name = "humhum"
version = "0.3.11"
description = "HumHum - Desktop jellyfish companion for AI coding assistants"
authors = ["HumHum Contributors"]
license = "MIT"
repository = "https://github.com/edible999999999-jpg/humhum"
edition = "2021"

[lib]
name = "humhum_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# The `objc` 0.2 crate's `sel_impl!` macro expands to `cfg(feature = "cargo-clippy")`,
# which Rust's `unexpected_cfgs` lint flags because we declare no such feature.
# Declaring it here as a known cfg silences those warnings crate-wide without
# touching the intentional macOS private-API code that uses `msg_send!`.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
getrandom = "0.3"
tokio-rustls = "0.26"
rustls-pemfile = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
dispatch = "0.2"
plist = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
